add dinnerdash color aqua

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <header>
       <div id="top-div" style="display: flex;">
-        <h3 style="color: white;">dinnerdash</h3>
+        <h3 style="color: white;">dinner<span style="color: aqua;">dash</span></h3>
         <nav>
       
         <a href="#">backoffice</a>
